2009-03-24  Stefan Jahn  <stefan@lkcc.org>

	* check_spice.cpp: Experimental version of G/E types poly source
	translation added.

2009-03-14  Stefan Jahn  <stefan@lkcc.org>

	* check_spice.cpp: Allow "C12 1 2 C=126f" syntax to be translated
	correctly.

2008-11-02  Stefan Jahn  <stefan@lkcc.org>

	* check_vcd.cpp, parse_vcd.y, scan_vcd.l: Using 'double' to store
	timestamp values necessary for large positive timestamps (when
	simulating in millisecond and larger ranges).

2008-10-07  Stefan Jahn  <stefan@lkcc.org>

	* check_spice.cpp: Applied changes in component definitions and
	their properties.

2008-09-20  Stefan Jahn  <stefan@lkcc.org>

	* qucs_producer.cpp, check_spice.cpp: Updated versions for
	HICUM/L0 models and parameters.

2008-07-07  Stefan Jahn  <stefan@lkcc.org>

	* qucs_producer.cpp, check_spice.cpp: Checking for HICUM
	transistors.

2008-05-28  Stefan Jahn  <stefan@lkcc.org>

	* scan_spice.l: Allowing 'M' parameter to be appended to MOSFET
	instances.

2007-08-28  Stefan Jahn  <stefan@lkcc.org>

	* touchstone_producer.cpp: Noise parameters are also exported if
	available in the Qucs dataset.

2007-08-27  Stefan Jahn  <stefan@lkcc.org>

	* touchstone_producer.cpp (touchstone_producer): Added new
	Touchstone producer.  Thus Qucs datasets can be exported to
	Touchstone.  TODO: noise parameters and frequency sort.

2007-08-15  Stefan Jahn  <stefan@lkcc.org>

	* qucsconv.cpp: Added new converter from CSV (comma separated
	file) to qucs dataset.

2007-05-31  Stefan Jahn  <stefan@lkcc.org>

	* scan_spice.l: Allowing inline comments to start with '$'
	character (hspice syntax).

2007-05-17  Stefan Jahn  <stefan@lkcc.org>

	* check_spice.cpp: Translation of mutual inductors can now be
	handled for an virtually unlimited number of coupling coefficients
	using the new MUTX component.

	* qucs_producer.cpp: Adjusted property printer to handle property
	vectors correctly.

2007-04-30  Stefan Jahn  <stefan@lkcc.org>
