@@ -1,3 +1,7 @@
+2009-03-25  Stefan Jahn  <stefan@lkcc.org>
+
+	* check_spice.cpp: Minor code cleanup for poly source translation.
+
 2009-03-24  Stefan Jahn  <stefan@lkcc.org>
 
 	* check_spice.cpp: Experimental version of G/E types poly source
